samples/_failures_safe/1761391537_6a5adb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd9ebaae.c: In function ‘main’:
./samples/SAFE/__tmp_bd9ebaae.c:154:5: error: expected expression at end of input
  154 |     graph_add_edge(&g, b,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_bd9ebaae.c:154:5: error: too few arguments to function ‘graph_add_edge’
./samples/SAFE/__tmp_bd9ebaae.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_bd9ebaae.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&g, b,
      |     ^~~~~~~~~~~~~~
